--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.9",
     "@pinata/sdk": "^2.1.0",
+    "@walletconnect/ethereum-provider": "^2.11.0",
+    "axios": "^1.6.5",
+    "firebase": "^10.7.1",
     "form-data": "^4.0.0",
     "formidable": "^2.1.2",
+    "mongodb": "^6.3.0",
     "next": "13.4.12",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-moralis": "^1.4.2",
+    "react-router-dom": "^6.21.2",
+    "swr": "^2.2.4",
+    "web3uikit": "^1.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
