--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ NEXT_PUBLIC_GATEWAY_TOKEN=
 MONGODB_URI="mongodb+srv://researchgrps123:iOTo6YEo9TAPLMRg@cluster0.ierihyj.mongodb.net/"
 MONGODB_DB='test'
 
+OPENAI_API_KEY = "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"
+
 <PatientProfile
     key={patientAddress}
     name={name}
