--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@pinata/sdk": "^2.1.0",
     "@walletconnect/ethereum-provider": "^2.11.0",
     "axios": "^1.6.5",
+    "dotenv": "^16.4.1",
     "firebase": "^10.7.1",
     "form-data": "^4.0.0",
     "formidable": "^2.1.2",
     "mongodb": "^6.3.0",
     "next": "13.4.12",
+    "openai": "^4.26.0",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
